<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KöVa</string>
    <!--    Facebook-->

    <string name="facebook_app_id" tools:ignore="MissingTranslation">859031526463616</string>
    <string name="fb_login_protocol_scheme" tools:ignore="MissingTranslation">fb859031526463616</string>
    <string name="facebook_client_token" tools:ignore="MissingTranslation">506bc7ed4f8a20eaea05dc837381b64e</string>
    <!-- LOGIN / REGISTRO -->
    <string name="correo">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="repite_contrasena">Repite la contraseña</string>
    <string name="boton_entrar">Iniciar sesión</string>
    <string name="boton_registrarse">Registrarse</string>
    <string name="redireccion_registrarse">¿Aún no tienes cuenta? Regístrate</string>
    <string name="redireccion_entrar">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="olvidado_contrasena">He olvidado mi contraseña</string>
    <string name="default_web_client_id">523985247931-do2tpl6e497k2vnkinkd8u2hppbj7kr1.apps.googleusercontent.com</string>


    <!-- REGISTRAR / MIS COCHES -->
    <string name="mensaje_registro_coche">Es necesario registrar un coche para acceder a la aplicación</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="matricula">Matrícula</string>
    <string name="nombre_coche">Nombre del coche</string>
    <string name="boton_registrar_coche">Registrar vehículo</string>
    <string name="titulo_mis_coches">Mis coches registrados</string>
    <string name="descripcion_mis_coches">Gestiona tus vehículos y visualízalos en el mapa en tiempo real.</string>
    <string name="boton_añadir_coche">Añadir nuevo coche</string>

    <!-- UBICACIÓN -->
    <string name="titulo_ubicacion">Ubicación de tus coches</string>
    <string name="descripcion_ubicacion">Mira donde se encuentra cada coche registrado y accede a sus controles rápidos</string>

    <!-- NOTIFICACIONES -->
    <string name="titulo_notificaciones">Notificaciones</string>
    <string name="ventana_rota">Ventana rota detectada</string>
    <string name="mensaje_ventana_rota">El sensor del coche “El Champon” ha detectado una vibración fuerte en la ventana delantera.</string>
    <string name="puertas_desbloqueadas">Puertas desbloqueadas</string>
    <string name="mensaje_puertas_desbloqueadas">Las puertas del coche “Speedy Azul” se han abierto correctamente desde la app</string>
    <string name="ubicacion_actualizada">Ubicación actualizada</string>
    <string name="modo_seguro_activado">Modo seguro</string>
    <string name="camara_activada">Cámara</string>

    <!-- AJUSTES -->
    <string name="ajustes">Ajustes</string>
    <string name="usuario_info">Usuario estándar · 3 coches</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="cuenta_perfil">Cuenta y perfil</string>
    <string name="coches_registrados">Coches registrados</string>
    <string name="notificaciones_ajustes">Notificaciones</string>
    <string name="seguridad">Seguridad</string>
    <string name="apariencia">Apariencia</string>
    <string name="ayuda_soporte">Ayuda y soporte</string>

    <!-- APARIENCIA -->
    <string name="titulo_apariencia">Apariencia</string>
    <string name="descripcion_apariencia">Personaliza cómo se ve tu aplicación</string>
    <string name="modo_nocturno">Modo nocturno</string>

    <!-- AYUDA Y SOPORTE -->
    <string name="titulo_ayuda">Ayuda y soporte</string>
    <string name="descripcion_ayuda">¿Necesitas ayuda o tienes dudas? Aquí puedes encontrar toda la información.</string>
    <string name="preguntas_frecuentes">Preguntas frecuentes</string>
    <string name="como_añadir_coche"><a href="https://www.google.com">¿Cómo añadir un coche?</a></string>
    <string name="como_activar_sensores"><a href="https://www.google.com">¿Cómo activar los sensores?</a></string>
    <string name="que_hacer_si_pierdo_coche"><a href="https://www.google.com">¿Qué hacer si pierdo el coche?</a></string>
    <string name="contactar_soporte">Contacta con el soporte</string>
    <string name="correo_soporte">support@carsecureapp.com</string>
    <string name="terminos_privacidad">Términos y privacidad</string>
    <string name="descripcion_terminos">Consulta nuestras políticas de uso y protección de datos</string>
    <!-- usar nombres SIN acentos/ñ para las keys -->
    <string name="camaras">Cámaras</string>
    <string name="senales">Señales</string>
    <string name="bateria">Batería</string>

    <string name="home">Inicio</string>
    <string name="bloqueado">Bloquear</string>
    <string name="señales">Señales</string>
    <string name="batería">Batería</string>
    <string name="calle">C/ Paranimf, 1, 46730 Gandia, Valencia</string>
    <string name="champon">EL CHAMPON ESTA CERRADO</string>
    <string name="wifi">Sistema activo y vigilando</string>

    <string name="volver">Volver</string>
    <string name="camaras_en_directo">Cámaras en directo</string>
    <string name="hacer_foto">Hacer foto</string>
    <string name="camara_superior">Cámara superior</string>
    <string name="camara_inferior">Cámara inferior</string>
    <string name="toggle_notification">Activar o desactivar notificación</string>
    <string name="nventana_rota">Ventana rota detectada</string>
    <string name="ncamara_activada">Cámara activada</string>
    <string name="title_notificaciones">Notificaciones</string>
    <string name="back">Volver</string>
    <string name="elige_alertas">Elige qué tipo de alertas quieres recibir:</string>
    <string name="puertas_abiertas">Desbloquear</string>
    <string name="movimiento_detectado">Movimiento detectado</string>
    <string name="sonido_o_luces">Sonido o luces de aviso</string>
    <string name="cambios_ubicacion">Cambios de ubicación</string>
    <string name="apertura_puertas">Apertura de puertas</string>
    <string name="puertas">Abrir</string>
    <string name="assistant">Asistente</string>


    <string name="guardar_cambios">Guardar</string>
    <string name="apertura_vehiculo">Apertura vehiculo</string>
    <string name="google_maps_key">AIzaSyCvjpWVS9xG6Wg7l6qY0bvWM0-d-b6QVFA</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>

    <string-array name="lista_coches">
        <item>El Champon</item>
        <item>Speedy Azul</item>
        <item>Roadster Negro</item>
    </string-array>

    <string name="camara_no_conectada">La camara no esta conectada</string>



</resources>
