<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="@drawable/bg_rectangulo_soft"
        android:weightSum="4"
        android:elevation="00dp">

        <!-- Home -->

        <!-- Coche -->
        <ImageButton
            android:id="@+id/nav_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/home"
            android:padding="25dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_casa"
            app:tint="@color/icono_normal" />

        <ImageButton
            android:id="@+id/nav_car"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/titulo_ubicacion"
            android:src="@drawable/ic_coche"
            app:tint="@color/icono_normal"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:padding="25dp" />

        <!-- Notificaciones -->

        <!-- Ajustes -->
        <ImageButton
            android:id="@+id/nav_notifications"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/notificaciones_ajustes"
            android:fillColor="#FFF9C4"
            android:padding="25dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_notificaciones1"/>

        <ImageButton
            android:id="@+id/nav_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_config"
            android:contentDescription="@string/ajustes"
            app:tint="@color/icono_normal"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:padding="25dp" />

    </LinearLayout>
</FrameLayout>

