<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <!-- Logo -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="167dp"
        android:layout_height="96dp"
        android:layout_marginTop="64dp"
        android:contentDescription="Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logokova" />

    <!-- Texto explicativo -->

    <!-- Título: Marca -->
    <TextView
        android:id="@+id/txtExplicativo"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/mensaje_registro_coche"
        android:textSize="12sp"
        android:textColor="?attr/android:textColor"
        app:layout_constraintStart_toStartOf="@+id/etMarcaEditar"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txtMarcaE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/marca"
        android:textColor="?attr/android:textColorTertiary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/etMarcaEditar"
        app:layout_constraintTop_toBottomOf="@+id/txtExplicativo" />

    <!-- Input de texto: Marca -->
    <EditText
        android:id="@+id/etMarcaEditar"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="text"
        style="@style/EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMarcaE"
        android:background="@drawable/rounded_edittext_selector"
        />

    <!-- Input de texto: Modelo -->
    <TextView
        android:id="@+id/txtModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/modelo"
        android:textColor="?attr/android:textColorTertiary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/etModelo"
        app:layout_constraintTop_toBottomOf="@+id/etMarcaEditar"
        />

    <!-- Input de texto: Modelo -->
    <EditText
        android:id="@+id/etModelo"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="text"
        style="@style/EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtModelo"
        android:background="@drawable/rounded_edittext_selector"/>

    <!-- Título: Matrícula -->
    <TextView
        android:id="@+id/txtMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/matricula"
        android:textColor="?attr/android:textColorTertiary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/etMatricula"
        app:layout_constraintTop_toBottomOf="@+id/etModelo" />

    <!-- Input de texto: Matrícula -->
    <EditText
        android:id="@+id/etMatricula"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:inputType="textCapCharacters"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
        android:ems="10"
        style="@style/EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMatricula"
        android:background="@drawable/rounded_edittext_selector"/>

    <!-- Título: Nombre del coche -->
    <TextView
        android:id="@+id/txtNombreCoche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/nombre_coche"
        android:textColor="?attr/android:textColorTertiary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/etNombreCoche"
        app:layout_constraintTop_toBottomOf="@+id/etMatricula" />

    <!-- Input de texto: Nombre del coche -->
    <EditText
        android:id="@+id/etNombreCoche"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="text"
        style="@style/EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreCoche"
        android:background="@drawable/rounded_edittext_selector"/>

    <!-- Botón para registrar vehículo -->
    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/boton_registrar_coche"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreCoche"
        style="@style/BotonPrincipal"/>

</androidx.constraintlayout.widget.ConstraintLayout>